# astral-ng

./: .gitignore  .gitmodules  .upstream-version  AGENTS.md  CHANGELOG.md  CLAUDE.md  DOWNSTREAM_CHANGES.md  README.md  README_en.md  analysis_options.yaml  flake.nix  package.nix  pubspec.yaml
.github/workflows/: ci.yml  linux-build.yaml  release.yml
android/: build.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
assets/: 1.md
assets/translations/: de.json  en.json  es.json  fr.json  ja.json  ko.json  ru.json  zh.json
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: app.dart  main.dart
lib/core/app_s/: global_error_handler.dart
lib/core/builders/: server_config_builder.dart
lib/core/constants/: window_manager.dart
lib/core/models/: all_settings.dart  all_settings.g.dart  net_config.dart  net_config.g.dart
lib/core/repositories/: app_settings_repository.dart  network_config_repository.dart  theme_repository.dart
lib/core/services/: app_settings_service.dart  network_config_service.dart  notification_service.dart  server_connection_manager.dart  vpn_manager.dart  widget_service.dart
lib/core/states/: app_settings_state.dart  network_config_state.dart  notification_state.dart  startup_state.dart  ui_state.dart  update_state.dart
lib/screens/: main_screen.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
linux/: CMakeLists.txt
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner/Configs/: AppInfo.xcconfig
patches/: MODIFICATIONS.md  README.md  easytier-cli-tui.rs  easytier-core.patch
rust/: Cargo.toml  build.rs
rust/easytier/: Cargo.toml
rust/easytier/src/tunnel/fake_tcp/netfilter/: mod.rs
rust/src/: frb_generated.rs
rust/src/api/: magic_wall.rs  nat_test.rs  nt.rs  p2p.rs  simple.rs
scripts/: generate_icons.py
windows/runner/: main.cpp
(+70 files in other folders)
